objects/SBQQ__QuoteTerm__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteTermHelp</customHelpPage>
    <description>Legal term printed on quote document.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this quote term is available for use.</description>
        <inlineHelpText>Indicates that this quote term is available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdvancedCondition__c</fullName>
        <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Term Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
        <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Term Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
        <label>Advanced Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Body__c</fullName>
        <description>Body containing text of the term.</description>
        <inlineHelpText>Text content of this term.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls a Quote Term being editable by a user.</description>
        <inlineHelpText>Controls a Quote Term being editable by a user.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent term for this term.</description>
        <inlineHelpText>Parent term for this term.</inlineHelpText>
        <label>Parent Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Sub Terms</relationshipLabel>
        <relationshipName>SubTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrintOrder__c</fullName>
        <description>Order in which the terms are printed on quote document.</description>
        <inlineHelpText>Specifies the order in which the terms are printed on quote document.</inlineHelpText>
        <label>Print Order</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote to which this term applies.</description>
        <inlineHelpText>Quote to which this term applies. Left blank if this is a standard term.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Terms</relationshipLabel>
        <relationshipName>QuoteTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the standard term that is being modified.</description>
        <inlineHelpText>Specifies the standard term that is being modified.</inlineHelpText>
        <label>Standard Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Modified Terms</relationshipLabel>
        <relationshipName>ModifiedTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>Status of this quote term.</description>
        <inlineHelpText>Status of this quote term.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TemplateContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template Content to which this term is applied.</description>
        <inlineHelpText>Template Content to which this term is applied.</inlineHelpText>
        <label>Template Content</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__TemplateContent__c.SBQQ__Type__c</field>
                <operation>equals</operation>
                <value>Quote Terms</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Terms</relationshipLabel>
        <relationshipName>Quote_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Indicates if the term is standard, custom, or modified.</description>
        <formula>IF(AND(ISBLANK(SBQQ__Quote__c),ISBLANK(SBQQ__StandardTerm__c)), $Label.SBQQ__lbl_standard,
  IF(AND(NOT(ISBLANK(SBQQ__Quote__c)),ISBLANK(SBQQ__StandardTerm__c)), $Label.SBQQ__lbl_custom, $Label.SBQQ__lbl_modified))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the term is standard, custom, or modified.</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Quote Term</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__PrintOrder__c</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Term #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>